[workspace]
members = ["bin/input-gen", "crates/input"]
exclude = []
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
alloy = { version = "1.0.30", features = ["full"] }
alloy-consensus = { version = "1.0.30", default-features = false }
alloy-json-rpc = { version = "1.0.38", default-features = false }
alloy-provider = { version = "1.0.38", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-client = { version = "1.0.38", default-features = false }
alloy-transport = { version = "1.0.38", default-features = false }
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3.3"
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenv = "0.15.0"
eyre = "0.6.12"
k256 = "0.13"
serde = "1.0"
serde_with = "3.14"
serde_json = "1.0"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
tracing-subscriber = "0.3.18"
url = "2.3"

rsp-client-executor = { git = "https://github.com/succinctlabs/rsp.git", rev = "be2fe1274414a33cab9adb68825dc2eb029c7a4a" }
rsp-host-executor = { git = "https://github.com/succinctlabs/rsp.git", rev = "be2fe1274414a33cab9adb68825dc2eb029c7a4a", features = ["execution-witness"] }
rsp-primitives = { git = "https://github.com/succinctlabs/rsp.git", rev = "be2fe1274414a33cab9adb68825dc2eb029c7a4a" }
rsp-provider = { git = "https://github.com/succinctlabs/rsp.git", rev = "be2fe1274414a33cab9adb68825dc2eb029c7a4a" }
# zeth-host = { git = "https://github.com/boundless-xyz/zeth.git", rev = "db4c2d45233b59bdd2a85fcb7f9d36a12bebe0c1" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.7.0", features = ["serde", "serde-bincode-compat"] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.7.0", features = ["serde", "serde-bincode-compat"] }