[package]
name = "input"
description = ""
version.workspace = true
edition.workspace = true

[dependencies]
rsp-client-executor.workspace = true
rsp-host-executor.workspace = true
rsp-primitives.workspace = true
rsp-provider.workspace = true
anyhow.workspace = true
alloy.workspace = true
alloy-consensus.workspace = true
alloy-json-rpc.workspace = true
alloy-provider.workspace = true
alloy-rpc-client.workspace = true
alloy-transport.workspace = true
async-trait.workspace = true
bincode.workspace = true
clap.workspace = true
dotenv.workspace = true
eyre.workspace = true
k256.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives-traits.workspace = true
